# ScaleFill

backend/: Cargo.toml  genValues.py
backend/src/: scale.rs  ws.rs
backend/src/ws/: client.rs
frontend/: .gitignore  package.json
frontend/src/: index.tsx
frontend/src/assets/: bottling.css
frontend/src/helper/: appContext.ts  exchange.ts  types.ts  websocket.ts
frontend/src/pages/: app.tsx  home.tsx  settings.tsx
