[package]
name = "scale_valve"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
futures-util = "0.3"
num = { version = "0.4.1", features = ["serde"] }
pin-project = "1.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-serial = { version = "5"}
tokio-websockets = { version = "0.4", features = ["server", "ring"] }
